--- a/demo/package.json
+++ b/demo/package.json
@@ -11,11 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "city-picker": "^0.0.4",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.2",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
