--- a/demo/package.json
+++ b/demo/package.json
@@ -16,8 +16,9 @@
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.2",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
+    "qs": "^6.7.0",
     "vue": "^2.5.2",
-    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
