--- a/demo/package.json
+++ b/demo/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "city-picker": "^0.0.4",
+    "echarts": "^4.4.0",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.7.2",
     "jquery": "^3.3.1",
