--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.7.2",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "lib-flexible": "^0.3.2",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -59,6 +60,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
