--- a/demo/package.json
+++ b/demo/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "0.0.6",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
