--- a/demo/package.json
+++ b/demo/package.json
@@ -22,6 +22,8 @@
     "postcss-px2rem-exclude": "0.0.6",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.15.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
